add sourch code

--- a/web-electrolux/index.html
+++ b/web-electrolux/index.html
@@ -129,18 +129,16 @@
 </g>
 <path fill-rule="evenodd" clip-rule="evenodd" d="M10.7919 16.4287C10.9081 16.5459 11.0545 16.6047 11.2151 16.6047C11.3615 16.6047 11.5229 16.5459 11.6391 16.4287L15.4988 12.559C15.6158 12.4423 15.6742 12.2956 15.6742 12.1338C15.6742 11.9728 15.6158 11.8262 15.4988 11.7095L11.6391 7.83984C11.4057 7.60514 11.0253 7.60514 10.7919 7.83984C10.5576 8.0738 10.5576 8.45525 10.7919 8.68995L14.2268 12.1338L10.7919 15.5784C10.5576 15.8131 10.5576 16.1938 10.7919 16.4287Z" fill="white" stroke="#011E41" stroke-width="0.5"/>
 </svg></div>
-
-                
-                   <div class="slide__text">
-                       <div class="slide__play"><svg width="50" height="50" viewBox="0 0 24 25" fill="none" xmlns="http://www.w3.org/2000/svg">
+                 <div class="slide__play"><svg width="50" height="50" viewBox="0 0 24 25" fill="none" xmlns="http://www.w3.org/2000/svg">
 <path fill-rule="evenodd" clip-rule="evenodd" d="M12.4999 24.0002C19.1086 24.0002 24.5 18.63 24.5 12.0001C24.5 5.3705 19.1086 0.000244141 12.4999 0.000244141C5.89039 0.000244141 0.5 5.39063 0.5 12.0001C0.5 18.6088 5.89039 24.0002 12.4999 24.0002ZM12.5004 1.00024C18.5626 1.00024 23.5 5.93846 23.5 12.0007C23.5 18.0629 18.5626 23.0002 12.5004 23.0002C6.43821 23.0002 1.5 18.0629 1.5 12.0007C1.5 5.93846 6.43821 1.00024 12.5004 1.00024Z" fill="white"/>
 <path fill-rule="evenodd" clip-rule="evenodd" d="M10.25 17.0002C10.25 17.0002 17 12.1881 17 11.9997C17 11.8122 10.25 7.00024 10.25 7.00024V17.0002Z" fill="white"/>
-</svg></div>
-                      <h1 class="slide__text-title">40% less colour fading</h1> 
-                      <p class="slide__text-paragrap">UltraMix keeps colours vibrant and rich for longer. Detergent is dissolved before it enters the drum so that it can immediately get to work on delivering effective cleaning, even in cool water. This means that you can wash at lower temperatures without compromising on cleaning performance, reducing colour fading by up to 40%*.</p>
-                      <p class="slide__text-line">*40% less colour fading after 52 washes. EWF1141AEWA vs. previous model EWF12942See less</p>
+</svg></div>            
+                   <div class="slide__text"> 
+                      <h1 class="slide__title">40% less colour fading</h1> 
+                      <p class="slide__paragrap">UltraMix keeps colours vibrant and rich for longer. Detergent is dissolved before it enters the drum so that it can immediately get to work on delivering effective cleaning, even in cool water. This means that you can wash at lower temperatures without compromising on cleaning performance, reducing colour fading by up to 40%*.</p>
+                      <p class="slide__line">*40% less colour fading after 52 washes. EWF1141AEWA vs. previous model EWF12942See less</p>
                    </div>
-                        <img class="slide__icon-dot" src="image/Carousel.svg">   
+                <img class="slide__dot" src="image/Carousel.svg">   
               </div>      
  <div class="features">
     <h2 class="features__content">Features</h2>
@@ -150,7 +148,7 @@
       <div class=" feature__item">SensorWash</div>
       <div class=" feature__item">UltraMix™ Technology</div>
       <div class=" feature__item">Load Sensor™ Technology</div>
-      <div class=" feature__item">Vapour Refresh</div>
+      <div class=" feature__item">Vapour Refrecósh</div>
       <div class=" feature__item">Add Clothes</div>
       <div class=" feature__item">Wifi connectivity</div>
       <div class=" feature__item">Woolmark Apparel Care</div>
@@ -158,13 +156,14 @@
       <div class=" feature__item">Child Lock</div>
       <div class=" feature__item">Stain Option</div>
     </div>
-  </div>  
-   <div class="Specification">
-      <h2 class="">Specification</h2>
-      <img class="Specification__content" src="image/Group%204.svg">
-<div class="Specification__second">
+  </div>   
+   <div class="specification">
+      <h2 >Specification</h2>
+     <div class="specification__second"> 
+      <img class="specification__img" src="image/Group%204.svg">
+<div class="specification__content">
     <div class="conten">
-      <h3 class="Specification-title"></h2>
+      <h3 class="specification-title">Size</h2>
         <ul class="content-catenory">
             <li class="content-item">850mm (H)</li>
             <li class="content-item">600mm (W)</li>
@@ -172,36 +171,40 @@
         </ul>
         </div>
         <div class="conten">
-      <h3 class="Specification-title">Type</h2>
+      <h3 class="specification-title">Type</h2>
         <ul class="content-catenory">
             <li class="content-item">Front load washer</li>
         </ul>
         </div>
         <div class="conten">
-      <h3 class="Specification-title">Washing capacity (Kg)</h2>
+      <h3 class="specification-title">Washing capacity (Kg)</h2>
         <ul class="content-catenory">
             <li class="content-item">9kg</li>
         </ul>
         </div>
         </div>
-        <div class="Specification__second">
-            <h3 class="Specification-title">Download user manual</h3>
+        <div class="specification__content">
+            <h3 class="specification-title">Download user manual</h3>
             <ul class="content-catenory">
-                <li class="content-catenory">
+                <li class="content-item">
                     <img src="image/download-button.svg" alt="">
                     <span>Complete user's manual (4.49 MB)</span>
                 </li>
-                <li class="content-catenory">
+                <li class="content-item">
                    <img src="image/download-button.svg" alt="">
                     <span>Troubleshooting guide (4.49 MB)</span> 
                 </li>
-                <li class="content-catenory">
+                <li class="content-item">
                     <img src="image/download-button.svg" alt="">
                     <span>QuickStart guide (4.49 MB)</span>
                 </li>
             </ul>
         </div>
   </div>
-  </div> 
+   <div class="specification__third">
+            <h3>View More</h3>
+            <img src="image/Path.svg" alt=""> 
+         </div> 
+    </div> 
 </body>  
   </html>
