add sourch code animation

--- a/web-electrolux/index.html
+++ b/web-electrolux/index.html
@@ -47,7 +47,7 @@
         </div>
     </div>
 </div>
-    <div class="product__right">
+    <div class="product__second">
             <div class="product__prince">16.490.000đ</div>
             <button class="product__cart">ADD TO CART</button>
   </div>
@@ -203,8 +203,73 @@
   </div>
    <div class="specification__third">
             <h3>View More</h3>
-            <img src="image/Path.svg" alt=""> 
+            <img class="specification__img" src="image/Path.svg" alt=""> 
          </div> 
     </div> 
+    <div class="complementary-products">
+        <h3>Complementary products</h3>
+        <div class="complementary-products__list">
+            <div class="complementary-products__item">
+                <img class="complementary-products__img" src="image/img-product.svg" alt="">
+                <div class="complementary-produts__content">
+                    <div class="mau">
+                    <p>E40HBAE1</p>
+                    <h4>Laundry Pedestal with Drawer</h4>
+                    </div>
+                    <ul>
+                        <li>Precise dosing, less wear and tear*</li>
+                        <li>40% less colour fading after 52 washes*</li>
+                    </ul>
+                    <div class="complementary-produts__price">
+                        <h5>19.990.000 VND</h5>
+                        <div class="btn">
+                            <div class="btn__left">LEARN MORE</div>
+                            <div class="btn__right">Button</div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="complementary-products__item">
+                <img class="complementary-products__img" src="image/img-product.svg" alt="">
+                <div class="complementary-produts__content">
+                    <div class="mau">
+                    <p>E40HBAE1</p>
+                    <h4>Laundry Pedestal with Drawer</h4>
+                    </div>
+                    <ul>
+                        <li>Precise dosing, less wear and tear*</li>
+                        <li>40% less colour fading after 52 washes*</li>
+                    </ul>
+                    <div class="complementary-produts__price">
+                        <h5>19.990.000 VND</h5>
+                        <div class="btn">
+                            <div class="btn__left">LEARN MORE</div>
+                            <div class="btn__right">Button</div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="complementary-products__item">
+                <img class="complementary-products__img"src="image/img-product.svg" alt="">
+                <div class="complementary-produts__content">
+                    <div class="mau">
+                    <p>E40HBAE1</p>
+                    <h4>Laundry Pedestal with Drawer</h4>
+                    </div>
+                    <ul>
+                        <li>Precise dosing, less wear and tear*</li>
+                        <li>40% less colour fading after 52 washes*</li>
+                    </ul>
+                    <div class="complementary-produts__price">
+                        <h5>19.990.000 VND</h5>
+                        <div class="btn">
+                            <div class="btn__left">LEARN MORE</div>
+                            <div class="btn__right">Button</div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>  
   </html>
