add sourch code

--- a/web-electrolux/index.html
+++ b/web-electrolux/index.html
@@ -204,18 +204,18 @@
                 </div>
                 <div class="specification__content">
                     <h3 class="key-specification">Download user manual</h3>
-                    <ul class="content-manual-download">
+                    <ul class="content-container">
                         <li class="content-item">
                             <img src="image/download-button.svg" alt="">
-                            <a class="content-dowload"href="#">Complete user's manual (4.49 MB)</a>
+                            <a class="content-dowload" href="#">Complete user's manual (4.49 MB)</a>
                         </li>
                         <li class="content-item">
                             <img src="image/download-button.svg" alt="">
-                            <a class="content-dowload"href="#">Troubleshooting guide (4.49 MB)</a>
+                            <a class="content-dowload" href="#">Troubleshooting guide (4.49 MB)</a>
                         </li>
                         <li class="content-item">
                             <img src="image/download-button.svg" alt="">
-                            <a class="content-dowload"href="#">QuickStart guide (4.49 MB)</a>
+                            <a class="content-dowload" href="#">QuickStart guide (4.49 MB)</a>
                         </li>
                     </ul>
                 </div>
@@ -287,6 +287,14 @@
                             </div>
                         </div>
                     </div>
+                </div>
+            </div>
+        </div>
+        <div class="slide__second">
+            <h2 class="slide-title">You may also like</h2>
+            <div class="slide__list">
+                <div class="slide__item">
+                    
                 </div>
             </div>
         </div>
