--- a/Form/index.html
+++ b/Form/index.html
@@ -13,14 +13,14 @@
    <div class="main">
 
   <form action="" method="POST" class="form" id="form-1">
-    <h3 class="heading">Thành viên đăng ký</h3>
-    <p class="desc">Cùng nhau học lập trình miễn phí tại F8 ❤️</p>
+    <h3 class="heading" đăng ký</h3>
+    <p class="desc">Cùng nhau học </p>
 
     <div class="spacer"></div>
 
     <div class="form-group">
       <label for="fullname" class="form-label">Tên đầy đủ</label>
-      <input id="fullname" name="fullname" type="text" placeholder="VD: Sơn Đặng" class="form-control">
+      <input id="fullname" name="fullname" type="text" placeholder="VD: Vu Hue" class="form-control">
       <span class="form-message"></span>
     </div>
 
